// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > model > removeModel > success empty 1`] = `
[
  [
    [],
    [],
    undefined,
    [],
    undefined,
  ],
  {
    "modelId": "modelId",
    "semvers": [],
  },
  [
    undefined,
    undefined,
    [],
  ],
  {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "sort": [MockFunction],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
]
`;

exports[`services > model > removeModel > success entries 1`] = `
[
  [
    [
      undefined,
      undefined,
      undefined,
    ],
    [
      undefined,
      undefined,
      undefined,
    ],
    undefined,
    [
      undefined,
      undefined,
      undefined,
    ],
    undefined,
  ],
  {
    "modelId": "modelId",
    "semvers": [
      "1.2.3",
      "1.2.3",
      "1.2.3",
    ],
  },
  [
    undefined,
    undefined,
    [
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ],
  ],
  {
    "_id": {
      "toString": [Function],
    },
    "aggregate": [MockFunction],
    "append": [MockFunction],
    "delete": [MockFunction] {
      "calls": [
        [
          undefined,
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "deleteMany": [MockFunction],
    "deleteOne": [MockFunction],
    "find": [MockFunction],
    "findById": [MockFunction],
    "findByIdAndDelete": [MockFunction],
    "findOne": [MockFunction],
    "findOneAndDelete": [MockFunction],
    "findOneAndUpdate": [MockFunction],
    "group": [MockFunction],
    "lookup": [MockFunction],
    "markModified": [MockFunction],
    "match": [MockFunction],
    "save": [MockFunction],
    "sort": [MockFunction],
    "toObject": [MockFunction],
    "update": [MockFunction],
    "updateMany": [MockFunction],
    "updateOne": [MockFunction],
  },
]
`;
